kubernetes/akka-cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: akka-cluster-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: akka-cluster
  type: NodePort
