kubernetes/akka-cluster-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: akka-cluster-ingress
spec:
  backend:
    serviceName: akka-cluster-service
    servicePort: 8080
